# esp-cam-webserver

./: .gitignore  Cargo.toml  sdkconfig.defaults  wifi_config.sh
scripts/: flash.sh  once_init.sh  test.sh
src/: lib.rs  main.rs  sdmmc.rs
