[package]
name = "esp-cam-webserver"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
embedded-svc = "0.24"
esp-idf-hal = { git = "https://github.com/Slappy2022/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/Slappy2022/esp-idf-svc", branch = "0.45.0", features = ["experimental"] }
esp-idf-sys = { git = "https://github.com/Slappy2022/esp-idf-sys", features = ["binstart"] }
log = "0.4"

[build-dependencies]
embuild = "0.30.4"
