[package]
name = "esp-cam-webserver"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
embedded-svc = "0.24"
esp-cam-bindings = { git = "https://github.com/Slappy2022/esp-cam-bindings" }
esp-idf-hal = "0.40.1"
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }
esp-idf-sys = { version = "0.32", features = ["binstart"] }
log = "0.4"

[build-dependencies]
embuild = "0.30.4"
